--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ asttokens==2.2.1
 attrs==23.1.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
+black==23.3.0
+black-nb==0.7
 bleach==6.0.0
 cffi==1.15.1
 click==8.1.3
@@ -49,6 +51,7 @@ MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mistune==2.0.5
+mypy-extensions==1.0.0
 nbclassic==1.0.0
 nbclient==0.8.0
 nbconvert==7.4.0
@@ -62,6 +65,7 @@ packaging==23.1
 pandas==1.5.3
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
@@ -100,6 +104,8 @@ sweetviz==2.1.4
 terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
+tokenize-rt==5.0.0
+tomli==2.0.1
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.9.0
