--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
+annoy==1.17.3
 anyio==3.7.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
+astor==0.8.1
 asttokens==2.2.1
+async-timeout==4.0.2
 attrs==23.1.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 black==23.3.0
 black-nb==0.7
 bleach==6.0.0
+certifi==2023.5.7
 cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
 comm==0.1.3
 commonmark==0.9.1
 contourpy==1.0.7
 cycler==0.11.0
+dataclasses-json==0.5.8
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
@@ -23,7 +31,10 @@ executing==1.2.0
 fastjsonschema==2.17.1
 fonttools==4.39.4
 fqdn==1.5.1
+frozenlist==1.3.3
 gensim==4.3.1
+gpt4all==0.3.4
+greenlet==2.0.2
 idna==3.4
 importlib-resources==5.12.0
 ipaddress==1.0.23
@@ -47,10 +58,15 @@ jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
 kiwisolver==1.4.4
+langchain==0.0.205
+langchainplus-sdk==0.0.13
 MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mistune==2.0.5
+multidict==6.0.4
 mypy-extensions==1.0.0
 nbclassic==1.0.0
 nbclient==0.8.0
@@ -59,10 +75,14 @@ nbformat==5.9.0
 nest-asyncio==1.5.6
 notebook==6.5.4
 notebook_shim==0.2.3
+numexpr==2.8.4
 numpy==1.23.3
+openai==0.27.8
+openapi-schema-pydantic==1.2.4
 overrides==7.3.1
 packaging==23.1
 pandas==1.5.3
+pandasai==0.6.0
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.11.1
@@ -76,10 +96,12 @@ psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
+pydantic==1.10.9
 Pygments==2.15.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-json-logger==2.0.7
 pytz==2023.3
 PyYAML==6.0
@@ -87,11 +109,13 @@ pyzmq==25.1.0
 qtconsole==5.4.3
 QtPy==2.3.1
 regex==2023.6.3
+requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==12.6.0
 scapy==2.5.0
 scikit-learn==1.2.2
+scikit-llm==0.2.0
 scipy==1.10.1
 seaborn==0.12.2
 Send2Trash==1.8.2
@@ -100,9 +124,11 @@ skimpy==0.0.8
 smart-open==6.3.0
 sniffio==1.3.0
 soupsieve==2.4.1
+SQLAlchemy==2.0.16
 stack-data==0.6.2
 summarytools==0.2.3
 sweetviz==2.1.4
+tenacity==8.2.2
 terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
@@ -112,10 +138,14 @@ tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.9.0
 typeguard==2.13.3
+typing-inspect==0.9.0
+typing_extensions==4.6.3
 uri-template==1.2.0
+urllib3==2.0.3
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.2
 widgetsnbextension==4.0.7
 xgboost==1.7.5
+yarl==1.9.2
