--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.8.4
+aiohttp==3.8.5
 aiosignal==1.3.1
 annoy==1.17.3
 anyio==3.7.0
@@ -14,10 +14,11 @@ beautifulsoup4==4.12.2
 black==23.3.0
 black-nb==0.7
 bleach==6.0.0
-certifi==2023.5.7
+certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+colorclass==2.2.2
 comm==0.1.3
 commonmark==0.9.1
 contourpy==1.0.7
@@ -26,6 +27,7 @@ dataclasses-json==0.5.8
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
+docopt==0.6.2
 exceptiongroup==1.1.1
 executing==1.2.0
 fastjsonschema==2.17.1
@@ -58,8 +60,9 @@ jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
 kiwisolver==1.4.4
-langchain==0.0.205
+langchain==0.0.249
 langchainplus-sdk==0.0.13
+langsmith==0.0.16
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
@@ -89,6 +92,7 @@ pathspec==0.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
+pip-upgrader==1.4.15
 platformdirs==3.5.1
 prometheus-client==0.17.0
 prompt-toolkit==3.0.38
@@ -130,6 +134,7 @@ summarytools==0.2.3
 sweetviz==2.1.4
 tenacity==8.2.2
 terminado==0.17.1
+terminaltables==3.1.10
 threadpoolctl==3.1.0
 tinycss2==1.2.1
 tokenize-rt==5.0.0
