--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,13 @@ anyio==3.7.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
+asteval==0.9.31
 astor==0.8.1
 asttokens==2.2.1
+async-lru==2.0.4
 async-timeout==4.0.2
 attrs==23.1.0
+Babel==2.12.1
 backcall==0.2.0
 beautifulsoup4==4.12.2
 black==23.3.0
@@ -28,12 +31,14 @@ debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
 docopt==0.6.2
+duckdb==0.8.1
 exceptiongroup==1.1.1
 executing==1.2.0
 fastjsonschema==2.17.1
 fonttools==4.39.4
 fqdn==1.5.1
 frozenlist==1.3.3
+future==0.18.3
 gensim==4.3.1
 gpt4all==0.3.4
 greenlet==2.0.2
@@ -48,21 +53,29 @@ isoduration==20.11.0
 jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
+json5==0.9.14
 jsonpointer==2.3
 jsonschema==4.17.3
+jsonschema-specifications==2023.7.1
 jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.6.3
+jupyter-lsp==2.2.0
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 jupyter_server==2.6.0
 jupyter_server_terminals==0.4.4
+jupyterlab==4.0.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
+jupyterlab_server==2.24.0
+keras==2.13.1
 kiwisolver==1.4.4
 langchain==0.0.249
 langchainplus-sdk==0.0.13
 langsmith==0.0.16
+lmfit==1.2.2
+lxml==4.9.3
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
@@ -85,7 +98,7 @@ openapi-schema-pydantic==1.2.4
 overrides==7.3.1
 packaging==23.1
 pandas==1.5.3
-pandasai==0.6.0
+pandasai==1.2.8
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.11.1
@@ -99,11 +112,13 @@ prompt-toolkit==3.0.38
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 pycparser==2.21
 pydantic==1.10.9
 Pygments==2.15.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
+pyshark==0.4.6
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
@@ -112,23 +127,26 @@ PyYAML==6.0
 pyzmq==25.1.0
 qtconsole==5.4.3
 QtPy==2.3.1
+referencing==0.30.2
 regex==2023.6.3
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==12.6.0
+rpds-py==0.9.2
 scapy==2.5.0
 scikit-learn==1.2.2
 scikit-llm==0.2.0
 scipy==1.10.1
 seaborn==0.12.2
 Send2Trash==1.8.2
+setuptools-scm==7.1.0
 six==1.16.0
 skimpy==0.0.8
 smart-open==6.3.0
 sniffio==1.3.0
 soupsieve==2.4.1
-SQLAlchemy==2.0.16
+SQLAlchemy==1.4.49
 stack-data==0.6.2
 summarytools==0.2.3
 sweetviz==2.1.4
@@ -145,6 +163,7 @@ traitlets==5.9.0
 typeguard==2.13.3
 typing-inspect==0.9.0
 typing_extensions==4.6.3
+uncertainties==3.1.7
 uri-template==1.2.0
 urllib3==2.0.3
 wcwidth==0.2.6
