--- a/requirements.txt
+++ b/requirements.txt
@@ -30,10 +30,12 @@ dataclasses-json==0.5.8
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
+distro==1.8.0
 docopt==0.6.2
 duckdb==0.8.1
 exceptiongroup==1.1.1
 executing==1.2.0
+Faker==19.13.0
 fastjsonschema==2.17.1
 fonttools==4.39.4
 fqdn==1.5.1
@@ -42,6 +44,9 @@ future==0.18.3
 gensim==4.3.1
 gpt4all==0.3.4
 greenlet==2.0.2
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
 idna==3.4
 importlib-resources==5.12.0
 ipaddress==1.0.23
@@ -54,6 +59,7 @@ jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
 json5==0.9.14
+jsonpatch==1.33
 jsonpointer==2.3
 jsonschema==4.17.3
 jsonschema-specifications==2023.7.1
@@ -71,8 +77,9 @@ jupyterlab-widgets==3.0.7
 jupyterlab_server==2.24.0
 keras==2.13.1
 kiwisolver==1.4.4
+langchain==0.0.312
 langchainplus-sdk==0.0.13
-langsmith==0.0.16
+langsmith==0.0.43
 lmfit==1.2.2
 lxml==4.9.3
 MarkupSafe==2.1.2
@@ -92,18 +99,18 @@ notebook==6.5.4
 notebook_shim==0.2.3
 numexpr==2.8.4
 numpy==1.23.3
-openai==0.27.8
+openai==1.3.5
 openapi-schema-pydantic==1.2.4
 overrides==7.3.1
 packaging==23.1
 pandas==1.5.3
-pandasai==1.2.8
+pandasai==1.5.4
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==10.0.1
+Pillow==10.1.0
 pip-upgrader==1.4.15
 platformdirs==3.5.1
 prometheus-client==0.17.0
