--- a/requirements.txt
+++ b/requirements.txt
@@ -1,227 +1,234 @@
 absl-py==2.1.0
-aiohttp==3.9.3
+aiohttp==3.9.5
 aiosignal==1.3.1
-annotated-types==0.6.0
+annotated-types==0.7.0
 annoy==1.17.3
-anyio==4.2.0
+anyio==4.4.0
 appdirs==1.4.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asteval==0.9.31
+asteval==0.9.33
 astor==0.8.1
 asttokens==2.4.1
 async-lru==2.0.4
 async-timeout==4.0.3
 attrs==23.2.0
-Babel==2.14.0
+Babel==2.15.0
 backcall==0.2.0
-beartype==0.17.1
+beartype==0.18.5
 beautifulsoup4==4.12.3
-black==24.2.0
+black==24.4.2
 black-nb==0.7
 bleach==6.1.0
-cachetools==5.3.2
+cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 colorclass==2.2.2
-comm==0.2.1
+comm==0.2.2
 commonmark==0.9.1
-contourpy==1.2.0
+contourpy==1.2.1
 cycler==0.12.1
-dataclasses-json==0.6.4
+dataclasses-json==0.6.6
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.8
 distro==1.9.0
 dm-tree==0.1.8
 docopt==0.6.2
-duckdb==0.9.2
-exceptiongroup==1.2.0
+docstring_parser==0.16
+duckdb==0.10.3
+exceptiongroup==1.2.1
 executing==2.0.1
 Faker==19.13.0
 fastjsonschema==2.19.1
-fonttools==4.48.1
+fonttools==4.52.4
 fqdn==1.5.1
 frozenlist==1.4.1
-future==0.18.3
+future==1.0.0
 gensim==4.3.2
-google-api-core==2.17.0
-google-auth==2.27.0
-google-cloud-aiplatform==1.41.0
-google-cloud-bigquery==3.17.2
+google-api-core==2.19.0
+google-auth==2.29.0
+google-cloud-aiplatform==1.52.0
+google-cloud-bigquery==3.23.1
 google-cloud-core==2.4.1
-google-cloud-resource-manager==1.12.1
-google-cloud-storage==2.14.0
+google-cloud-resource-manager==1.12.3
+google-cloud-storage==2.16.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
-googleapis-common-protos==1.62.0
-gpt4all==2.2.1.post1
+googleapis-common-protos==1.63.0
+gpt4all==2.6.0
 greenlet==3.0.3
-griffe==0.40.1
+griffe==0.45.2
 grpc-google-iam-v1==0.13.0
-grpcio==1.60.1
-grpcio-status==1.60.1
+grpcio==1.64.0
+grpcio-status==1.62.2
 h11==0.14.0
-h5py==3.10.0
-httpcore==1.0.2
-httpx==0.26.0
-idna==3.6
-importlib-metadata==7.0.1
-importlib-resources==6.1.1
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
 ipaddress==1.0.23
-ipykernel==6.29.2
-ipython==8.21.0
+ipykernel==6.29.4
+ipython==8.24.0
 ipython-genutils==0.2.0
 ipywidgets==8.1.2
 isoduration==20.11.0
 jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.3.2
-json5==0.9.14
+Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.25
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.21.1
+jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 jupyter==1.0.0
 jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.2
-jupyterlab==4.1.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.1
 jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
+jupyterlab_server==2.27.2
 jupyterlab_widgets==3.0.10
-keras==3.0.4
+keras==3.3.3
 kiwisolver==1.4.5
-langchain==0.1.7
-langchain-community==0.0.20
-langchain-core==0.1.23
+langchain==0.2.1
+langchain-community==0.2.1
+langchain-core==0.2.1
+langchain-text-splitters==0.2.0
 langchainplus-sdk==0.0.20
-langsmith==0.0.91
-lmfit==1.2.2
-lxml==5.1.0
+langsmith==0.1.63
+lmfit==1.3.1
+lxml==5.2.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-marshmallow==3.20.2
+marshmallow==3.21.2
 marshmallow-enum==1.5.1
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
+matplotlib==3.9.0
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.0.2
+ml-dtypes==0.4.0
 multidict==6.0.5
 mypy-extensions==1.0.0
-namex==0.0.7
-nbclassic==1.0.0
-nbclient==0.9.0
-nbconvert==7.16.0
-nbformat==5.9.2
+namex==0.0.8
+nbclassic==1.1.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
 nest-asyncio==1.6.0
-notebook==7.1.0
-notebook_shim==0.2.3
-numexpr==2.9.0
+notebook==7.2.0
+notebook_shim==0.2.4
+numexpr==2.10.0
 numpy==1.26.4
-openai==1.12.0
+openai==1.30.3
 openapi-schema-pydantic==1.2.4
+optree==0.11.0
+orjson==3.10.3
 overrides==7.7.0
-packaging==23.2
-pandas==2.2.0
-pandasai==1.5.19
+packaging==24.0
+pandas==2.2.2
+pandasai==2.0.43
 pandocfilters==1.5.1
-parso==0.8.3
+parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
 pickleshare==0.7.5
-pillow==10.2.0
+pillow==10.3.0
 pip-upgrader==1.4.15
-platformdirs==4.2.0
-plum-dispatch==2.3.2
-polars==0.20.7
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
+platformdirs==4.2.2
+plum-dispatch==2.3.6
+polars==0.20.30
+prometheus_client==0.20.0
+prompt_toolkit==3.0.44
 proto-plus==1.23.0
-protobuf==4.25.2
+protobuf==4.25.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
-pyarrow==15.0.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==2.6.1
-pydantic_core==2.16.2
-Pygments==2.17.2
-pyparsing==3.1.1
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
+Pygments==2.18.0
+pyparsing==3.1.2
 pyrsistent==0.20.0
 pyshark==0.6
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
-PyYAML==5.3.1
-pyzmq==25.1.2
-qtconsole==5.5.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+qtconsole==5.5.2
 QtPy==2.4.1
 quartodoc==0.7.2
-referencing==0.33.0
-regex==2023.12.25
-requests==2.31.0
+referencing==0.35.1
+regex==2024.5.15
+requests==2.32.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==13.7.0
-rpds-py==0.18.0
+rich==13.7.1
+rpds-py==0.18.1
 rsa==4.9
 scapy==2.5.0
-scikit-learn==1.4.0
-scikit-llm==1.0.0
-scipy==1.12.0
+scikit-learn==1.5.0
+scikit-llm==1.1.0
+scipy==1.13.1
 seaborn==0.13.2
-Send2Trash==1.8.2
-setuptools-scm==8.0.4
-shapely==2.0.2
+Send2Trash==1.8.3
+setuptools-scm==8.1.0
+shapely==2.0.4
 six==1.16.0
-skimpy==0.0.14
-smart-open==6.4.0
-sniffio==1.3.0
+skimpy==0.0.15
+smart-open==7.0.4
+sniffio==1.3.1
 soupsieve==2.5
-sphobjinv==2.3.1
-SQLAlchemy==2.0.27
+sphobjinv==2.3.1.1
+SQLAlchemy==2.0.30
 stack-data==0.6.3
-summarytools==0.2.3
+summarytools==0.3.0
 sweetviz==2.3.1
 tabulate==0.9.0
-tenacity==8.2.3
+tenacity==8.3.0
 termcolor==2.4.0
-terminado==0.18.0
+terminado==0.18.1
 terminaltables==3.1.10
-threadpoolctl==3.2.0
-tinycss2==1.2.1
+threadpoolctl==3.5.0
+tinycss2==1.3.0
 tokenize-rt==5.2.0
 tomli==2.0.1
 tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.1
-typeguard==4.1.5
-types-python-dateutil==2.8.19.20240106
+tqdm==4.66.4
+traitlets==5.14.3
+typeguard==4.3.0
+types-python-dateutil==2.9.0.20240316
 typing-inspect==0.9.0
-typing_extensions==4.9.0
+typing_extensions==4.12.0
 tzdata==2024.1
 uncertainties==3.1.7
 uri-template==1.3.0
-urllib3==2.2.0
-watchdog==4.0.0
+urllib3==2.2.1
+watchdog==4.0.1
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.7.0
+websocket-client==1.8.0
 widgetsnbextension==4.0.10
+wrapt==1.16.0
 xgboost==2.0.3
 yarl==1.9.4
-zipp==3.17.0
+zipp==3.19.0
