--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ appdirs==1.4.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asteval==0.9.33
+asteval==1.0.0
 astor==0.8.1
 asttokens==2.4.1
 async-lru==2.0.4
@@ -22,7 +22,7 @@ black==24.4.2
 black-nb==0.7
 bleach==6.1.0
 cachetools==5.3.3
-certifi==2024.2.2
+certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
@@ -32,8 +32,8 @@ comm==0.2.2
 commonmark==0.9.1
 contourpy==1.2.1
 cycler==0.12.1
-dataclasses-json==0.6.6
-debugpy==1.8.1
+dataclasses-json==0.6.7
+debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
@@ -45,47 +45,47 @@ duckdb==0.10.3
 exceptiongroup==1.2.1
 executing==2.0.1
 Faker==19.13.0
-fastjsonschema==2.19.1
-fonttools==4.52.4
+fastjsonschema==2.20.0
+fonttools==4.53.1
 fqdn==1.5.1
 frozenlist==1.4.1
 future==1.0.0
 gensim==4.3.2
-google-api-core==2.19.0
-google-auth==2.29.0
-google-cloud-aiplatform==1.52.0
-google-cloud-bigquery==3.23.1
+google-api-core==2.19.1
+google-auth==2.31.0
+google-cloud-aiplatform==1.58.0
+google-cloud-bigquery==3.25.0
 google-cloud-core==2.4.1
 google-cloud-resource-manager==1.12.3
-google-cloud-storage==2.16.0
+google-cloud-storage==2.17.0
 google-crc32c==1.5.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.63.0
-gpt4all==2.6.0
+google-resumable-media==2.7.1
+googleapis-common-protos==1.63.2
+gpt4all==2.7.0
 greenlet==3.0.3
-griffe==0.45.2
-grpc-google-iam-v1==0.13.0
-grpcio==1.64.0
+griffe==0.47.0
+grpc-google-iam-v1==0.13.1
+grpcio==1.64.1
 grpcio-status==1.62.2
 h11==0.14.0
 h5py==3.11.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
-importlib_metadata==7.1.0
+importlib_metadata==8.0.0
 importlib_resources==6.4.0
 ipaddress==1.0.23
-ipykernel==6.29.4
-ipython==8.24.0
+ipykernel==6.29.5
+ipython==8.26.0
 ipython-genutils==0.2.0
-ipywidgets==8.1.2
+ipywidgets==8.1.3
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
 json5==0.9.25
 jsonpatch==1.33
-jsonpointer==2.4
+jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 jupyter==1.0.0
@@ -94,27 +94,27 @@ jupyter-events==0.10.0
 jupyter-lsp==2.2.5
 jupyter_client==8.6.2
 jupyter_core==5.7.2
-jupyter_server==2.14.0
+jupyter_server==2.14.1
 jupyter_server_terminals==0.5.3
-jupyterlab==4.2.1
+jupyterlab==4.2.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.2
-jupyterlab_widgets==3.0.10
-keras==3.3.3
+jupyterlab_widgets==3.0.11
+keras==3.4.1
 kiwisolver==1.4.5
-langchain==0.2.1
-langchain-community==0.2.1
-langchain-core==0.2.1
-langchain-text-splitters==0.2.0
+langchain==0.2.6
+langchain-community==0.2.6
+langchain-core==0.2.11
+langchain-text-splitters==0.2.2
 langchainplus-sdk==0.0.20
-langsmith==0.1.63
+langsmith==0.1.84
 lmfit==1.3.1
 lxml==5.2.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-marshmallow==3.21.2
+marshmallow==3.21.3
 marshmallow-enum==1.5.1
-matplotlib==3.9.0
+matplotlib==3.9.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.0.2
@@ -127,33 +127,34 @@ nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
-notebook==7.2.0
+notebook==7.2.1
 notebook_shim==0.2.4
-numexpr==2.10.0
-numpy==1.26.4
-openai==1.30.3
+numexpr==2.10.1
+numpy==2.0.0
+nvidia-nccl-cu12==2.22.3
+openai==1.35.10
 openapi-schema-pydantic==1.2.4
-optree==0.11.0
-orjson==3.10.3
+optree==0.12.1
+orjson==3.10.6
 overrides==7.7.0
-packaging==24.0
-pandas==2.2.2
-pandasai==2.0.43
+packaging==24.1
+pandas==1.5.3
+pandasai==2.2.10
 pandocfilters==1.5.1
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
 pickleshare==0.7.5
-pillow==10.3.0
+pillow==10.4.0
 pip-upgrader==1.4.15
 platformdirs==4.2.2
-plum-dispatch==2.3.6
-polars==0.20.30
+plum-dispatch==2.5.1.post1
+polars==1.1.0
 prometheus_client==0.20.0
-prompt_toolkit==3.0.44
-proto-plus==1.23.0
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
 protobuf==4.25.3
-psutil==5.9.8
+psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
@@ -161,8 +162,8 @@ pyarrow==16.1.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
-pydantic==2.7.1
-pydantic_core==2.18.2
+pydantic==2.8.2
+pydantic_core==2.20.1
 Pygments==2.18.0
 pyparsing==3.1.2
 pyrsistent==0.20.0
@@ -175,19 +176,19 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 qtconsole==5.5.2
 QtPy==2.4.1
-quartodoc==0.7.2
+quartodoc==0.7.5
 referencing==0.35.1
 regex==2024.5.15
-requests==2.32.2
+requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
 rpds-py==0.18.1
 rsa==4.9
 scapy==2.5.0
-scikit-learn==1.5.0
-scikit-llm==1.1.0
-scipy==1.13.1
+scikit-learn==1.5.1
+scikit-llm==1.3.0
+scipy==1.14.0
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools-scm==8.1.0
@@ -198,12 +199,14 @@ smart-open==7.0.4
 sniffio==1.3.1
 soupsieve==2.5
 sphobjinv==2.3.1.1
-SQLAlchemy==2.0.30
+SQLAlchemy==2.0.31
+sqlglot==25.5.1
+sqlglotrs==0.2.8
 stack-data==0.6.3
 summarytools==0.3.0
 sweetviz==2.3.1
 tabulate==0.9.0
-tenacity==8.3.0
+tenacity==8.5.0
 termcolor==2.4.0
 terminado==0.18.1
 terminaltables==3.1.10
@@ -211,24 +214,24 @@ threadpoolctl==3.5.0
 tinycss2==1.3.0
 tokenize-rt==5.2.0
 tomli==2.0.1
-tornado==6.4
+tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
 typeguard==4.3.0
 types-python-dateutil==2.9.0.20240316
 typing-inspect==0.9.0
-typing_extensions==4.12.0
+typing_extensions==4.12.2
 tzdata==2024.1
-uncertainties==3.1.7
+uncertainties==3.2.2
 uri-template==1.3.0
-urllib3==2.2.1
+urllib3==2.2.2
 watchdog==4.0.1
 wcwidth==0.2.13
-webcolors==1.13
+webcolors==24.6.0
 webencodings==0.5.1
 websocket-client==1.8.0
-widgetsnbextension==4.0.10
+widgetsnbextension==4.0.11
 wrapt==1.16.0
-xgboost==2.0.3
+xgboost==2.1.0
 yarl==1.9.4
-zipp==3.19.0
+zipp==3.19.2
